--- a/spiegazione.org
+++ b/spiegazione.org
@@ -146,7 +146,7 @@ int lis(int sequence[], int size){
       L'algoritmo visto in classe ritorna il valore massimo ottenibile.
 
 
-
+      
 ***** Pseudocodice e spiegazione
       
       Come struttura di supporto viene utilizzata una matrice di dimensione *n+1* x *L+1*.
@@ -156,7 +156,16 @@ int lis(int sequence[], int size){
       Su ogni riga tutti i numeri da 0 a *n*.
       Alla posizione [i][j] troviamo il massimo valore ottenibile prendendo i oggetti avendo capacità j.
       
-      Inizializzo la matrice iniziale
+      I passi dell'algoritmo:
+      1. Inizializzo la matrice iniziale
+      2. Se la capacità che sto considerando (j) è minore del peso dell'oggetto significa
+	 che non posso prendere l'oggetto i. Il valore [i][j] sarà allora il massimo valore che posso ottenere
+	 con la stessa capacità j ma con un oggetto in meno (i-1).
+      3. Se la capacità è invece maggiore devo considerare se ci "guadagno" a prendere il nuovo oggetto.
+	 Controllo il valore massimo ottenibile senza prendere l'oggetto e lo confronto con il valore ottenuto
+	 aggiungendo il nuovo oggetto.
+      4. Ritorno il valore massimo ottenibile.
+
       
       #+BEGIN_SRC C++ -n
       for i=0 to n
